finalizar switch darkmode/lightmode + posição dos modais

--- a/index.html
+++ b/index.html
@@ -10,21 +10,37 @@
 </head>
 <body class="dark">
     <div class="in-screen dark">
+        <h1>senhas para humanos</h1>
         <div class="toggle-mode">
             <div>
-                <input type="radio" name="mode" id="light-mode" checked>
+                <input type="radio" name="mode" id="light-mode">
                 <label for="light-mode">
                     Light
                 </label>
             </div>
             <div>
-                <input type="radio" name="mode" id="dark-mode">
+                <input type="radio" name="mode" id="dark-mode" checked>
                 <label for="dark-mode">
                     Dark
                 </label>
             </div>
         </div>
-        <h1>senhas para humanos</h1>
+        <div class="cards-wrapper">
+            <div class="cards substantivo">
+                <div class="card-header"><p>Substantivo</p><close>x</close></div>
+                <div class="card-body">
+                    <h5>Título</h5>
+                    <p>Descrição........</p>
+                </div>
+            </div>
+            <div class="cards adjetivo">
+                <div class="card-header"><p>Adjetivo</p><close>x</close></div>
+                <div class="card-body">
+                    <h5>Título</h5>
+                    <p>Descrição........</p>
+                </div>
+            </div>
+        </div>
         <!-- <section id="intro">
             <p class='your-new'>Que tal essa?</p>
             <p class='shitty-pwd'><bold>uS4aCquX2u4isxs</bold><span>&#129326;</span><span>&#129326;</span></p>
@@ -69,7 +85,7 @@
     <div class="alerts">
         <p><bold>Boa!</bold> Sua <bold>nova senha</bold> foi copiada com <bold>sucesso!</bold></p>
     </div>
-    <div class="cards substantivo">
+    <!-- <div class="cards substantivo">
         <div class="card-header"><p>Substantivo</p><close>x</close></div>
         <div class="card-body">
             <h5>Título</h5>
@@ -82,7 +98,7 @@
             <h5>Título</h5>
             <p>Descrição........</p>
         </div>
-    </div>
+    </div> -->
     <div class="off-screen">
         <section id="referencias">
             <h6>Referências</h6>
